fix dark mode display

--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -220,15 +220,23 @@ a:visited {
 
 
 @media (prefers-color-scheme: dark) {
-    /* Dark Mode styles go here. */
     .colored-font {
         color: lightgray;
     }
     
-    #delay-content img {
-        filter: invert(100%) sepia(0%) saturate(7399%) hue-rotate(180deg) brightness(112%) contrast(80%);
+    .friction-customisation input {
+        background-color: white;
+        color: black;
     }
     
+    a,
+    a:visited {
+        color: gray;
+    }
+    #sites-arrow path {
+        fill: rgb(194, 194, 194);
+    }
+    #sites-arrow-right path, #sites-arrow-down path,
     #how-to-arrow-right path, #how-to-arrow-down path {
         fill: rgb(194, 194, 194);
     }
